syntax="proto3";

package protos;

message Handshake {
    uint64 NetID = 1;
    string Name = 2;
    bytes ID = 3;
    repeated uint64 CmdSets = 4;
    uint64 Version = 5;
    bytes RemoteIP = 6;
	uint32 RemotePort = 7;
    uint32 Port = 8;
}

message ConnProperty {
    string LocalID = 1;
    bytes LocalIP = 2;
    uint32 LocalPort = 3;
    string RemoteID = 4;
    bytes RemoteIP = 5;
    uint32 RemotePort = 6;
}

message Topo {
    string Pivot = 1;
    repeated ConnProperty Peers = 2;
    int64 Time = 3;
}
